[package]
name = "spinning"
version = "0.1.0"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2018"
description = "Mutexes and SIX locks implemented by spinning"
documentation = "https://docs.rs/spinning"
readme = "README.md"
repository = "https://github.com/4lDO2/spinning-rs.git"
license = "MIT OR Apache-2.0"
keywords = ["rwlock", "mutex", "spinlock", "no_std", "once"]
categories = ["concurrency", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lock_api = "0.3"
